# C_find_max_min_on_positions

./: CMakeLists.txt  README.md  main.c
